--- a/app/src/main/res/layout/collaps_bar.xml
+++ b/app/src/main/res/layout/collaps_bar.xml
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:text="(2 235)"
+            android:text=""
             android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/simpleRatingBar"
@@ -132,7 +132,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="3dp"
-        android:text="Сейчас в заведении: 12"
+        android:text=""
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/ringRow"
         app:layout_constraintStart_toStartOf="parent" />
@@ -149,7 +149,7 @@
         android:gravity="center"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:text="Подписчики: 524"
+        android:text=""
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/ringRow"
         app:layout_constraintEnd_toEndOf="parent"
