--- a/app/src/main/res/layout/dialog_row.xml
+++ b/app/src/main/res/layout/dialog_row.xml
@@ -30,7 +30,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Василий"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/dialog_row_time"
@@ -50,7 +50,7 @@
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:lines="1"
-        android:text="Hello! sdf dsf ds fsd fds fsd fsd fds fsd dsf sd dfs dsf dsf "
+        android:text=""
         android:textColor="@color/black_67percent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:text="12:48"
+        android:text=""
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +77,7 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/round_textview_bg"
         android:gravity="center"
-        android:text="23"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="10dp"
         android:textStyle="bold"
