--- a/app/src/main/res/layout/action_item.xml
+++ b/app/src/main/res/layout/action_item.xml
@@ -66,7 +66,7 @@
                 android:layout_marginStart="16dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Name"
+                android:text=""
                 android:textColor="@android:color/white"
                 android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:text="Time"
+                android:text=""
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="@+id/placePhoto"
                 app:layout_constraintStart_toEndOf="@+id/placePhoto"
