--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -285,7 +285,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:text="30.12.2018"
+            android:text=""
             android:textColor="@android:color/black"
             android:textSize="13dp" />
 
