--- a/app/src/main/res/layout/activity_full_view.xml
+++ b/app/src/main/res/layout/activity_full_view.xml
@@ -56,7 +56,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/ic_send_message"
+            app:srcCompat="@drawable/ic_send_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
