--- a/app/src/main/res/layout/chronichs_item.xml
+++ b/app/src/main/res/layout/chronichs_item.xml
@@ -28,19 +28,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </android.support.v7.widget.CardView>
-
-
-
-
-<!--    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/deliver_color"
-        app:layout_constraintBottom_toBottomOf="parent" />-->
-
 
     <TextView
         android:id="@+id/placeLabel"
@@ -53,13 +41,12 @@
         android:paddingBottom="2dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:text="album name"
+        android:text=""
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardViewChronics"
         tools:ignore="MissingConstraints" />
-    <!--android:background="@drawable/place_corner_bg"-->
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -85,7 +72,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/placeLabel"
