--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -26,7 +26,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Name"
+        android:text=""
         android:textColor="@color/black_67percent"
         android:textSize="14dp"
         app:layout_constraintEnd_toStartOf="@+id/commentsSettings"
@@ -44,7 +44,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:text="Time"
+        android:text=""
         android:textSize="12dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +61,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Comment"
+        android:text=""
         android:textColor="@color/black_67percent"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,8 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-
-        android:text="45"
+        android:text=""
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="@+id/likeIcon"
         app:layout_constraintEnd_toEndOf="parent"
