--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="Луганск"
+                android:text=""
                 android:textColor="@android:color/white"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
