--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -166,7 +166,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="24.07.1875"
+                    android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
