--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -27,7 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Василий"
         android:textColor="@android:color/black"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,8 +69,7 @@
             android:id="@+id/placeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:text="Чайхана" />
+            android:paddingLeft="8dp" />
 
     </LinearLayout>
 
@@ -97,8 +95,7 @@
             android:id="@+id/likesCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:text="32" />
+            android:paddingLeft="8dp" />
 
     </LinearLayout>
 
