--- a/app/src/main/res/layout/my_message_row.xml
+++ b/app/src/main/res/layout/my_message_row.xml
@@ -41,7 +41,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
-                android:text="fdgfd gdfg df gd"
+                android:text=""
                 android:textColor="@android:color/white"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="12:48"
+                android:text=""
                 android:textColor="@color/white_50percent"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
