--- a/app/src/main/res/layout/my_post_message_row.xml
+++ b/app/src/main/res/layout/my_post_message_row.xml
@@ -93,7 +93,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="12:48"
+                android:text=""
                 android:textColor="@color/white_50percent"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="@+id/attImage"
@@ -146,7 +146,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="12.06.17"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messageContent" />
 
