--- a/app/src/main/res/layout/place_item_by_coordinates.xml
+++ b/app/src/main/res/layout/place_item_by_coordinates.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="sdfsds fdsf dsjkl fkldsjkl fdsklj fkjdskl fkldsklf klds"
+        android:text=""
         android:textColor="@color/black_67percent"
         android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@+id/radioButton"
