--- a/app/src/main/res/layout/profile_content.xml
+++ b/app/src/main/res/layout/profile_content.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:alpha="0.75"
-        android:text="Вася Колотушкин"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
