--- a/app/src/main/res/layout/recyclerview_row.xml
+++ b/app/src/main/res/layout/recyclerview_row.xml
@@ -30,7 +30,7 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/black_67percent"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
