--- a/app/src/main/res/layout/top_checkin_item.xml
+++ b/app/src/main/res/layout/top_checkin_item.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
-                    android:text="Name"
+                    android:text=""
                     android:textColor="@color/black_67percent"
                     android:textSize="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
                     android:layout_height="18dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:src="@drawable/ic_heart_outline_grey600_18dp"
+                    app:srcCompat="@drawable/ic_heart_outline_grey600_18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/likesCount"
                     app:layout_constraintTop_toTopOf="parent"
