--- a/app/src/main/res/layout/top_place_item.xml
+++ b/app/src/main/res/layout/top_place_item.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
             <TextView
-
                 android:id="@+id/positionTopCount"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -15,7 +13,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/round_top_bg"
                 android:gravity="center"
-                android:text="23"
+                android:text=""
                 android:textColor="@android:color/white"
                 android:textSize="10dp"
                 android:textStyle="bold"
