--- a/app/src/main/res/layout/top_user_row.xml
+++ b/app/src/main/res/layout/top_user_row.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
-        android:text="Василий"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
